misc fixes: menu collapse, no touche, new intro text

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -64,7 +64,7 @@ h1 {
     font-size: 1em;
 }*/
 
-body > nav > ul > li.toggle-topbar.menu-icon > a > span, body > nav > section > ul > li.active.has-dropdown.not-click.moved > ul > li.title.back.js-generated > h5 > a {
+body > nav > ul > li.toggle-topbar.menu-icon > a > span, body > nav > section > ul > li.active.has-dropdown.not-click.moved > ul > li.title.back.js-generated > h5 > a, body > nav > section > ul > li.active.has-dropdown.moved > ul > li.title.back.js-generated > h5 > a {
   font-family: $nav-font-family;
 }
 p::first-letter,
